--- a/elkmonitoring/ems2json/pom.xml
+++ b/elkmonitoring/ems2json/pom.xml
@@ -11,12 +11,9 @@
     </parent>
     
 	<artifactId>ems2json</artifactId>
-	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<properties>
-		<monitoringShared.version>0.0.8-SNAPSHOT</monitoringShared.version>
-		
+	<properties>		
 		<jms.version>2.0.1</jms.version>
 		<tibco.version>8.5</tibco.version>		
 	</properties>
@@ -47,10 +44,12 @@
 					<groupId>commons-cli</groupId>
 					<artifactId>commons-cli</artifactId>
 				</exclusion>
+<!--  
 				<exclusion>
 					<groupId>commons-io</groupId>
 					<artifactId>commons-io</artifactId>
 				</exclusion>
+-->		
 			</exclusions>
 		</dependency>
 		
@@ -85,6 +84,11 @@
         <dependency>
             <groupId>commons-cli</groupId>
             <artifactId>commons-cli</artifactId>
+        </dependency>
+
+        <dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-csv</artifactId>
         </dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.tibco/tibjms -->
