--- a/elkmonitoring/pom.xml
+++ b/elkmonitoring/pom.xml
@@ -19,7 +19,9 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
         
-		<lombok.version>1.18.4</lombok.version>
+        <monitoringShared.version>0.0.8-SNAPSHOT</monitoringShared.version>
+        
+		<lombok.version>1.18.12</lombok.version>
 		<logback.version>1.2.3</logback.version>
 		<gson.version>2.8.5</gson.version>
         <tibco.version>8.4.1</tibco.version>
@@ -184,7 +186,6 @@
 					</execution>
 				</executions>
 			</plugin>
-
 		</plugins>
 	</build>
 
